fix: remove body overflow limitations as fixed scrolling isn't working :(

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -190,9 +190,3 @@ All colors MUST be HSL.
 .animate-flame-dance {
   animation: flame-dance 2s ease-in-out infinite;
 }
-
-body {
-  height: 100vh;
-  height: -webkit-fill-available;
-  overflow: hidden;
-}
